plugins {
  id 'java'
  id 'org.springframework.boot' version '4.0.1'
  id 'io.spring.dependency-management' version '1.1.7'
}

group = 'interview.pilot'
version = '0.0.1-SNAPSHOT'

java {
  toolchain {
    languageVersion = JavaLanguageVersion.of(21)
  }
}

repositories {
  mavenCentral()
  maven { url = 'https://repo.spring.io/milestone' }
}

dependencies {
  implementation('org.springframework.boot:spring-boot-starter-webmvc') {
    exclude group: 'org.apache.tomcat.embed', module: 'tomcat-embed-websocket'
  }
  implementation 'org.springframework.boot:spring-boot-starter-validation'
  implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
  implementation 'org.springframework.boot:spring-boot-starter-actuator'
  implementation 'org.springframework.boot:spring-boot-starter-security'
  implementation 'org.springframework.session:spring-session-data-redis'
  implementation 'org.aspectj:aspectjweaver'
  implementation 'org.springframework.boot:spring-boot-starter-amqp'
  implementation 'org.redisson:redisson-spring-boot-starter:4.0.0'

  implementation 'org.springframework.boot:spring-boot-starter-flyway'
  runtimeOnly 'org.flywaydb:flyway-mysql'
  runtimeOnly 'com.mysql:mysql-connector-j'

  implementation 'org.springframework.ai:spring-ai-openai:2.0.0-M4'
  implementation 'org.springframework.ai:spring-ai-starter-vector-store-qdrant:2.0.0-M4'
  implementation 'io.grpc:grpc-netty-shaded:1.65.1'
  implementation 'org.yaml:snakeyaml'

  implementation 'org.apache.tika:tika-core:2.9.2'
  implementation 'org.apache.tika:tika-parsers-standard-package:2.9.2'
  implementation 'com.fasterxml.jackson.core:jackson-databind'

  compileOnly 'org.projectlombok:lombok'
  annotationProcessor 'org.projectlombok:lombok'

  testImplementation 'org.springframework.boot:spring-boot-starter-test'
  testImplementation 'org.springframework.boot:spring-boot-webmvc-test'
  testImplementation 'org.springframework.security:spring-security-test'
  testImplementation 'org.testcontainers:testcontainers-mysql'
  testImplementation 'org.testcontainers:testcontainers-rabbitmq'
  testImplementation 'org.testcontainers:testcontainers-junit-jupiter'
  testImplementation 'org.wiremock:wiremock-standalone:3.13.2'
}

tasks.named('test') {
  useJUnitPlatform()
  environment 'KNOWLEDGE_ENABLED', 'false'
  environment 'DASHSCOPE_ENABLED', 'false'
  environment 'DEEPSEEK_ENABLED', 'false'
  environment 'KIMI_ENABLED', 'false'
}
